2003-09-11  Daniel Jacobowitz  <drow@mvista.com>

	Merge from mainline:
	2003-07-13  Mark Kettenis  <kettenis@gnu.org>

	* objfiles.h (struct objfile): Add memebers `data' and `num_data'.
	(register_objfile_data, set_objfile_data, objfile_data): New
	prototypes.
	* objfiles.c (objfile_alloc_data, objfile_free_data): New
	prototypes.
	(allocate_objfile): Call objfile_alloc_data.
	(free_objfile): Call objfile_free_data.
	(struct objfile_data): New.
	(struct objfile_data_registration): New.
	(struct objfile_data_registry): New.
	(objfile_data_registry): New variable.
	(register_objfile_data): New function.
	(objfile_alloc_data, objfile_free_data): New functions.
	(set_objfile_data, objfile_data): New functions.
	* dwarf2-frame.c (dwarf2_frame_data): New variable.
	(dwarf2_frame_find_fde, add_fde): Use new per-objfile data mechanism.
	(_initialize_dwarf2_frame): New function and prototype.

2003-09-13  Andrew Cagney  <cagney@redhat.com>

	* linux-nat.h (struct target_waitstatus): Declare opaque.
	* dwarf2-frame.h (struct frame_info): Declare opaque.

2003-09-13  Christopher Faylor  <cgf@redhat.com>

	* win32-nat.c: Just rely on CONTEXT_EXTENDED_REGISTER being defined for
	SSE registers since gdb will not operate correctly without this.
	Restore include file ordering munged in previous change.
	* config/i386/tm-cygwin.h: Remove HAVE_SSE_REGS define.

2003-09-12  Christopher Faylor  <cgf@redhat.com>

	* win32-nat.c: Reorganize so that defines used by target headers are
	actually defined by the system headers.
	* config/i386/tm-cygwin.h: Check for CONTEXT_EXTENDED_REGISTERS rather
	than HAVE_CONTEXT_EXTENDED_REGISTERS, since the latter actually exists.

2003-09-12  Jim Blandy  <jimb@redhat.com>

	* ppc-linux-tdep.c: More "Linux" -> "GNU/Linux".

2003-09-12  Jeff Johnston  <jjohnstn@redhat.com>

        * top.c (quit_target): New static helper function.
        (quit_force): Moved code to quit_target().  Call quit_target()